[tool.poetry]
name = "python-devops-template"
version = "0.1.0"
description = "Minimal Python template for DevOps workflows"
authors = ["b-basa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
# Add runtime dependencies here
# Example:
# fastapi = "^0.75"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
detect-secrets = "^1.4.0"
pre-commit = "^3.5.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = ["app/main.py"]